input.output
Grammar

    0 $accept: program $end

    1 program: sentence_list

    2 repeat_start: REPEAT arithmetic_expression DO NEWLINE_TKN

    3 repeat_end: repeat_start sentence_list DONE NEWLINE_TKN

    4 sentence_list: sentence_list sentence
    5              | sentence
    6              | repeat_end
    7              | sentence_list repeat_end

    8 sentence: expression NEWLINE_TKN
    9         | assignment
   10         | representation_mode NEWLINE_TKN
   11         | NEWLINE_TKN

   12 representation_mode: BIN
   13                    | OCT
   14                    | DEC
   15                    | HEX
   16                    | RIC

   17 assignment: ID_TKN ASSIGN expression NEWLINE_TKN

   18 expression: arithmetic_expression

   19 arithmetic_expression: exp

   20 exp: exp1 ADDITION exp
   21    | exp1 SUBSTRACTION exp
   22    | exp1

   23 exp1: SUBSTRACTION exp2
   24     | ADDITION exp2
   25     | exp2

   26 exp2: exp3 MULTIPLICATION exp2
   27     | exp3 DIVISION exp2
   28     | exp3 MOD exp2
   29     | exp3

   30 exp3: exp4 POWER exp3
   31     | SIN exp4
   32     | COS exp4
   33     | TAN exp4
   34     | exp4

   35 exp4: OPENPAR exp CLOSEDPAR
   36     | INTEGER_TKN
   37     | FLOAT_TKN
   38     | ID_TKN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER_TKN <integer> (258) 36
    FLOAT_TKN <real> (259) 37
    ID_TKN <id> (260) 17 38
    NEWLINE_TKN <no_value> (261) 2 3 8 10 11 17
    ASSIGN <no_value> (262) 17
    OPENPAR <no_value> (263) 35
    CLOSEDPAR <no_value> (264) 35
    ADDITION <no_value> (265) 20 24
    SUBSTRACTION <no_value> (266) 21 23
    POWER <no_value> (267) 30
    MULTIPLICATION <no_value> (268) 26
    DIVISION <no_value> (269) 27
    MOD <no_value> (270) 28
    SIN <no_value> (271) 31
    COS <no_value> (272) 32
    TAN <no_value> (273) 33
    OCT <no_value> (274) 13
    BIN <no_value> (275) 12
    HEX <no_value> (276) 15
    DEC <no_value> (277) 14
    RIC <no_value> (278) 16
    REPEAT <no_value> (279) 2
    DONE <no_value> (280) 3
    DO <no_value> (281) 2


Nonterminals, with rules where they appear

    $accept (27)
        on left: 0
    program <no_value> (28)
        on left: 1
        on right: 0
    repeat_start <repeat_type> (29)
        on left: 2
        on right: 3
    repeat_end <no_value> (30)
        on left: 3
        on right: 6 7
    sentence_list <no_value> (31)
        on left: 4 5 6 7
        on right: 1 3 4 7
    sentence <no_value> (32)
        on left: 8 9 10 11
        on right: 4 5
    representation_mode <no_value> (33)
        on left: 12 13 14 15 16
        on right: 10
    assignment <assignment_type> (34)
        on left: 17
        on right: 9
    expression <expression_type> (35)
        on left: 18
        on right: 8 17
    arithmetic_expression <expression_type> (36)
        on left: 19
        on right: 2 18
    exp <expression_type> (37)
        on left: 20 21 22
        on right: 19 20 21 35
    exp1 <expression_type> (38)
        on left: 23 24 25
        on right: 20 21 22
    exp2 <expression_type> (39)
        on left: 26 27 28 29
        on right: 23 24 25 26 27 28
    exp3 <expression_type> (40)
        on left: 30 31 32 33 34
        on right: 26 27 28 29 30
    exp4 <expression_type> (41)
        on left: 35 36 37 38
        on right: 30 31 32 33 34


State 0

    0 $accept: • program $end

    INTEGER_TKN   shift, and go to state 1
    FLOAT_TKN     shift, and go to state 2
    ID_TKN        shift, and go to state 3
    NEWLINE_TKN   shift, and go to state 4
    OPENPAR       shift, and go to state 5
    ADDITION      shift, and go to state 6
    SUBSTRACTION  shift, and go to state 7
    SIN           shift, and go to state 8
    COS           shift, and go to state 9
    TAN           shift, and go to state 10
    OCT           shift, and go to state 11
    BIN           shift, and go to state 12
    HEX           shift, and go to state 13
    DEC           shift, and go to state 14
    RIC           shift, and go to state 15
    REPEAT        shift, and go to state 16

    program                go to state 17
    repeat_start           go to state 18
    repeat_end             go to state 19
    sentence_list          go to state 20
    sentence               go to state 21
    representation_mode    go to state 22
    assignment             go to state 23
    expression             go to state 24
    arithmetic_expression  go to state 25
    exp                    go to state 26
    exp1                   go to state 27
    exp2                   go to state 28
    exp3                   go to state 29
    exp4                   go to state 30


State 1

   36 exp4: INTEGER_TKN •

    $default  reduce using rule 36 (exp4)


State 2

   37 exp4: FLOAT_TKN •

    $default  reduce using rule 37 (exp4)


State 3

   17 assignment: ID_TKN • ASSIGN expression NEWLINE_TKN
   38 exp4: ID_TKN •

    ASSIGN  shift, and go to state 31

    $default  reduce using rule 38 (exp4)


State 4

   11 sentence: NEWLINE_TKN •

    $default  reduce using rule 11 (sentence)


State 5

   35 exp4: OPENPAR • exp CLOSEDPAR

    INTEGER_TKN   shift, and go to state 1
    FLOAT_TKN     shift, and go to state 2
    ID_TKN        shift, and go to state 32
    OPENPAR       shift, and go to state 5
    ADDITION      shift, and go to state 6
    SUBSTRACTION  shift, and go to state 7
    SIN           shift, and go to state 8
    COS           shift, and go to state 9
    TAN           shift, and go to state 10

    exp   go to state 33
    exp1  go to state 27
    exp2  go to state 28
    exp3  go to state 29
    exp4  go to state 30


State 6

   24 exp1: ADDITION • exp2

    INTEGER_TKN  shift, and go to state 1
    FLOAT_TKN    shift, and go to state 2
    ID_TKN       shift, and go to state 32
    OPENPAR      shift, and go to state 5
    SIN          shift, and go to state 8
    COS          shift, and go to state 9
    TAN          shift, and go to state 10

    exp2  go to state 34
    exp3  go to state 29
    exp4  go to state 30


State 7

   23 exp1: SUBSTRACTION • exp2

    INTEGER_TKN  shift, and go to state 1
    FLOAT_TKN    shift, and go to state 2
    ID_TKN       shift, and go to state 32
    OPENPAR      shift, and go to state 5
    SIN          shift, and go to state 8
    COS          shift, and go to state 9
    TAN          shift, and go to state 10

    exp2  go to state 35
    exp3  go to state 29
    exp4  go to state 30


State 8

   31 exp3: SIN • exp4

    INTEGER_TKN  shift, and go to state 1
    FLOAT_TKN    shift, and go to state 2
    ID_TKN       shift, and go to state 32
    OPENPAR      shift, and go to state 5

    exp4  go to state 36


State 9

   32 exp3: COS • exp4

    INTEGER_TKN  shift, and go to state 1
    FLOAT_TKN    shift, and go to state 2
    ID_TKN       shift, and go to state 32
    OPENPAR      shift, and go to state 5

    exp4  go to state 37


State 10

   33 exp3: TAN • exp4

    INTEGER_TKN  shift, and go to state 1
    FLOAT_TKN    shift, and go to state 2
    ID_TKN       shift, and go to state 32
    OPENPAR      shift, and go to state 5

    exp4  go to state 38


State 11

   13 representation_mode: OCT •

    $default  reduce using rule 13 (representation_mode)


State 12

   12 representation_mode: BIN •

    $default  reduce using rule 12 (representation_mode)


State 13

   15 representation_mode: HEX •

    $default  reduce using rule 15 (representation_mode)


State 14

   14 representation_mode: DEC •

    $default  reduce using rule 14 (representation_mode)


State 15

   16 representation_mode: RIC •

    $default  reduce using rule 16 (representation_mode)


State 16

    2 repeat_start: REPEAT • arithmetic_expression DO NEWLINE_TKN

    INTEGER_TKN   shift, and go to state 1
    FLOAT_TKN     shift, and go to state 2
    ID_TKN        shift, and go to state 32
    OPENPAR       shift, and go to state 5
    ADDITION      shift, and go to state 6
    SUBSTRACTION  shift, and go to state 7
    SIN           shift, and go to state 8
    COS           shift, and go to state 9
    TAN           shift, and go to state 10

    arithmetic_expression  go to state 39
    exp                    go to state 26
    exp1                   go to state 27
    exp2                   go to state 28
    exp3                   go to state 29
    exp4                   go to state 30


State 17

    0 $accept: program • $end

    $end  shift, and go to state 40


State 18

    3 repeat_end: repeat_start • sentence_list DONE NEWLINE_TKN

    INTEGER_TKN   shift, and go to state 1
    FLOAT_TKN     shift, and go to state 2
    ID_TKN        shift, and go to state 3
    NEWLINE_TKN   shift, and go to state 4
    OPENPAR       shift, and go to state 5
    ADDITION      shift, and go to state 6
    SUBSTRACTION  shift, and go to state 7
    SIN           shift, and go to state 8
    COS           shift, and go to state 9
    TAN           shift, and go to state 10
    OCT           shift, and go to state 11
    BIN           shift, and go to state 12
    HEX           shift, and go to state 13
    DEC           shift, and go to state 14
    RIC           shift, and go to state 15
    REPEAT        shift, and go to state 16

    repeat_start           go to state 18
    repeat_end             go to state 19
    sentence_list          go to state 41
    sentence               go to state 21
    representation_mode    go to state 22
    assignment             go to state 23
    expression             go to state 24
    arithmetic_expression  go to state 25
    exp                    go to state 26
    exp1                   go to state 27
    exp2                   go to state 28
    exp3                   go to state 29
    exp4                   go to state 30


State 19

    6 sentence_list: repeat_end •

    $default  reduce using rule 6 (sentence_list)


State 20

    1 program: sentence_list •
    4 sentence_list: sentence_list • sentence
    7              | sentence_list • repeat_end

    INTEGER_TKN   shift, and go to state 1
    FLOAT_TKN     shift, and go to state 2
    ID_TKN        shift, and go to state 3
    NEWLINE_TKN   shift, and go to state 4
    OPENPAR       shift, and go to state 5
    ADDITION      shift, and go to state 6
    SUBSTRACTION  shift, and go to state 7
    SIN           shift, and go to state 8
    COS           shift, and go to state 9
    TAN           shift, and go to state 10
    OCT           shift, and go to state 11
    BIN           shift, and go to state 12
    HEX           shift, and go to state 13
    DEC           shift, and go to state 14
    RIC           shift, and go to state 15
    REPEAT        shift, and go to state 16

    $default  reduce using rule 1 (program)

    repeat_start           go to state 18
    repeat_end             go to state 42
    sentence               go to state 43
    representation_mode    go to state 22
    assignment             go to state 23
    expression             go to state 24
    arithmetic_expression  go to state 25
    exp                    go to state 26
    exp1                   go to state 27
    exp2                   go to state 28
    exp3                   go to state 29
    exp4                   go to state 30


State 21

    5 sentence_list: sentence •

    $default  reduce using rule 5 (sentence_list)


State 22

   10 sentence: representation_mode • NEWLINE_TKN

    NEWLINE_TKN  shift, and go to state 44


State 23

    9 sentence: assignment •

    $default  reduce using rule 9 (sentence)


State 24

    8 sentence: expression • NEWLINE_TKN

    NEWLINE_TKN  shift, and go to state 45


State 25

   18 expression: arithmetic_expression •

    $default  reduce using rule 18 (expression)


State 26

   19 arithmetic_expression: exp •

    $default  reduce using rule 19 (arithmetic_expression)


State 27

   20 exp: exp1 • ADDITION exp
   21    | exp1 • SUBSTRACTION exp
   22    | exp1 •

    ADDITION      shift, and go to state 46
    SUBSTRACTION  shift, and go to state 47

    $default  reduce using rule 22 (exp)


State 28

   25 exp1: exp2 •

    $default  reduce using rule 25 (exp1)


State 29

   26 exp2: exp3 • MULTIPLICATION exp2
   27     | exp3 • DIVISION exp2
   28     | exp3 • MOD exp2
   29     | exp3 •

    MULTIPLICATION  shift, and go to state 48
    DIVISION        shift, and go to state 49
    MOD             shift, and go to state 50

    $default  reduce using rule 29 (exp2)


State 30

   30 exp3: exp4 • POWER exp3
   34     | exp4 •

    POWER  shift, and go to state 51

    $default  reduce using rule 34 (exp3)


State 31

   17 assignment: ID_TKN ASSIGN • expression NEWLINE_TKN

    INTEGER_TKN   shift, and go to state 1
    FLOAT_TKN     shift, and go to state 2
    ID_TKN        shift, and go to state 32
    OPENPAR       shift, and go to state 5
    ADDITION      shift, and go to state 6
    SUBSTRACTION  shift, and go to state 7
    SIN           shift, and go to state 8
    COS           shift, and go to state 9
    TAN           shift, and go to state 10

    expression             go to state 52
    arithmetic_expression  go to state 25
    exp                    go to state 26
    exp1                   go to state 27
    exp2                   go to state 28
    exp3                   go to state 29
    exp4                   go to state 30


State 32

   38 exp4: ID_TKN •

    $default  reduce using rule 38 (exp4)


State 33

   35 exp4: OPENPAR exp • CLOSEDPAR

    CLOSEDPAR  shift, and go to state 53


State 34

   24 exp1: ADDITION exp2 •

    $default  reduce using rule 24 (exp1)


State 35

   23 exp1: SUBSTRACTION exp2 •

    $default  reduce using rule 23 (exp1)


State 36

   31 exp3: SIN exp4 •

    $default  reduce using rule 31 (exp3)


State 37

   32 exp3: COS exp4 •

    $default  reduce using rule 32 (exp3)


State 38

   33 exp3: TAN exp4 •

    $default  reduce using rule 33 (exp3)


State 39

    2 repeat_start: REPEAT arithmetic_expression • DO NEWLINE_TKN

    DO  shift, and go to state 54


State 40

    0 $accept: program $end •

    $default  accept


State 41

    3 repeat_end: repeat_start sentence_list • DONE NEWLINE_TKN
    4 sentence_list: sentence_list • sentence
    7              | sentence_list • repeat_end

    INTEGER_TKN   shift, and go to state 1
    FLOAT_TKN     shift, and go to state 2
    ID_TKN        shift, and go to state 3
    NEWLINE_TKN   shift, and go to state 4
    OPENPAR       shift, and go to state 5
    ADDITION      shift, and go to state 6
    SUBSTRACTION  shift, and go to state 7
    SIN           shift, and go to state 8
    COS           shift, and go to state 9
    TAN           shift, and go to state 10
    OCT           shift, and go to state 11
    BIN           shift, and go to state 12
    HEX           shift, and go to state 13
    DEC           shift, and go to state 14
    RIC           shift, and go to state 15
    REPEAT        shift, and go to state 16
    DONE          shift, and go to state 55

    repeat_start           go to state 18
    repeat_end             go to state 42
    sentence               go to state 43
    representation_mode    go to state 22
    assignment             go to state 23
    expression             go to state 24
    arithmetic_expression  go to state 25
    exp                    go to state 26
    exp1                   go to state 27
    exp2                   go to state 28
    exp3                   go to state 29
    exp4                   go to state 30


State 42

    7 sentence_list: sentence_list repeat_end •

    $default  reduce using rule 7 (sentence_list)


State 43

    4 sentence_list: sentence_list sentence •

    $default  reduce using rule 4 (sentence_list)


State 44

   10 sentence: representation_mode NEWLINE_TKN •

    $default  reduce using rule 10 (sentence)


State 45

    8 sentence: expression NEWLINE_TKN •

    $default  reduce using rule 8 (sentence)


State 46

   20 exp: exp1 ADDITION • exp

    INTEGER_TKN   shift, and go to state 1
    FLOAT_TKN     shift, and go to state 2
    ID_TKN        shift, and go to state 32
    OPENPAR       shift, and go to state 5
    ADDITION      shift, and go to state 6
    SUBSTRACTION  shift, and go to state 7
    SIN           shift, and go to state 8
    COS           shift, and go to state 9
    TAN           shift, and go to state 10

    exp   go to state 56
    exp1  go to state 27
    exp2  go to state 28
    exp3  go to state 29
    exp4  go to state 30


State 47

   21 exp: exp1 SUBSTRACTION • exp

    INTEGER_TKN   shift, and go to state 1
    FLOAT_TKN     shift, and go to state 2
    ID_TKN        shift, and go to state 32
    OPENPAR       shift, and go to state 5
    ADDITION      shift, and go to state 6
    SUBSTRACTION  shift, and go to state 7
    SIN           shift, and go to state 8
    COS           shift, and go to state 9
    TAN           shift, and go to state 10

    exp   go to state 57
    exp1  go to state 27
    exp2  go to state 28
    exp3  go to state 29
    exp4  go to state 30


State 48

   26 exp2: exp3 MULTIPLICATION • exp2

    INTEGER_TKN  shift, and go to state 1
    FLOAT_TKN    shift, and go to state 2
    ID_TKN       shift, and go to state 32
    OPENPAR      shift, and go to state 5
    SIN          shift, and go to state 8
    COS          shift, and go to state 9
    TAN          shift, and go to state 10

    exp2  go to state 58
    exp3  go to state 29
    exp4  go to state 30


State 49

   27 exp2: exp3 DIVISION • exp2

    INTEGER_TKN  shift, and go to state 1
    FLOAT_TKN    shift, and go to state 2
    ID_TKN       shift, and go to state 32
    OPENPAR      shift, and go to state 5
    SIN          shift, and go to state 8
    COS          shift, and go to state 9
    TAN          shift, and go to state 10

    exp2  go to state 59
    exp3  go to state 29
    exp4  go to state 30


State 50

   28 exp2: exp3 MOD • exp2

    INTEGER_TKN  shift, and go to state 1
    FLOAT_TKN    shift, and go to state 2
    ID_TKN       shift, and go to state 32
    OPENPAR      shift, and go to state 5
    SIN          shift, and go to state 8
    COS          shift, and go to state 9
    TAN          shift, and go to state 10

    exp2  go to state 60
    exp3  go to state 29
    exp4  go to state 30


State 51

   30 exp3: exp4 POWER • exp3

    INTEGER_TKN  shift, and go to state 1
    FLOAT_TKN    shift, and go to state 2
    ID_TKN       shift, and go to state 32
    OPENPAR      shift, and go to state 5
    SIN          shift, and go to state 8
    COS          shift, and go to state 9
    TAN          shift, and go to state 10

    exp3  go to state 61
    exp4  go to state 30


State 52

   17 assignment: ID_TKN ASSIGN expression • NEWLINE_TKN

    NEWLINE_TKN  shift, and go to state 62


State 53

   35 exp4: OPENPAR exp CLOSEDPAR •

    $default  reduce using rule 35 (exp4)


State 54

    2 repeat_start: REPEAT arithmetic_expression DO • NEWLINE_TKN

    NEWLINE_TKN  shift, and go to state 63


State 55

    3 repeat_end: repeat_start sentence_list DONE • NEWLINE_TKN

    NEWLINE_TKN  shift, and go to state 64


State 56

   20 exp: exp1 ADDITION exp •

    $default  reduce using rule 20 (exp)


State 57

   21 exp: exp1 SUBSTRACTION exp •

    $default  reduce using rule 21 (exp)


State 58

   26 exp2: exp3 MULTIPLICATION exp2 •

    $default  reduce using rule 26 (exp2)


State 59

   27 exp2: exp3 DIVISION exp2 •

    $default  reduce using rule 27 (exp2)


State 60

   28 exp2: exp3 MOD exp2 •

    $default  reduce using rule 28 (exp2)


State 61

   30 exp3: exp4 POWER exp3 •

    $default  reduce using rule 30 (exp3)


State 62

   17 assignment: ID_TKN ASSIGN expression NEWLINE_TKN •

    $default  reduce using rule 17 (assignment)


State 63

    2 repeat_start: REPEAT arithmetic_expression DO NEWLINE_TKN •

    $default  reduce using rule 2 (repeat_start)


State 64

    3 repeat_end: repeat_start sentence_list DONE NEWLINE_TKN •

    $default  reduce using rule 3 (repeat_end)
